--- a/servicios_de_modelaje3d/pubspec.yaml
+++ b/servicios_de_modelaje3d/pubspec.yaml
@@ -34,12 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+flutter_native_splash:
+  color: "#FFFFFF" # Fondo del splash
+  image: assets/images/Medieval.png # Logo de tu app
+  branding: assets/images/Medieval.png # (opcional) Texto o marca adicional abajo
+  android: true
+  ios: true
+  web: false
 
+  
 dev_dependencies:
+  flutter_native_splash: ^2.4.6
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
+# The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
