--- a/servicios_de_modelaje3d/pubspec.yaml
+++ b/servicios_de_modelaje3d/pubspec.yaml
@@ -34,25 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-flutter_native_splash:
-  color: "#FFFFFF" # Fondo del splash
-  image: assets/images/Medieval.png # Logo de tu app
-  branding: assets/images/Medieval.png # (opcional) Texto o marca adicional abajo
-  android: true
-  ios: true
-  web: false
 
-  
 dev_dependencies:
-  flutter_native_splash: ^2.4.6
   flutter_test:
     sdk: flutter
-# The "flutter_lints" package below contains a set of recommended lints to
+  flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.4.6
+
+  # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,7 +63,14 @@ flutter:
       - assets/images/Medevial.jpg
       - assets/images/Medieval.png
       - assets/images/Shooter.jpg
-
+    
+flutter_native_splash:
+    color: "#FFFFFF"
+    image: assets/images/Medieval.png
+    branding: assets/images/Medieval.png
+    android: true
+    ios: true
+    web: false 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
