--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
       - assets/images/Shooter.png
       - assets/images/Logo.png
       - assets/images/Adventura.png
+      - assets/images/Fondo_main.jpeg
       - assets/camaraman.glb
 android_12:
     # The image parameter sets the splash screen icon image.  If this parameter is not specified,
