--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   crypto: ^3.0.6
+  google_fonts: ^6.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  change_app_package_name: ^1.5.0
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +77,7 @@ flutter:
       - assets/images/Adventura.png
       - assets/images/Fondo_main.jpeg
       - assets/camaraman.glb
+      - assets/icons/Logo.png # Agrega el archivo de ícono aquí
 android_12:
     # The image parameter sets the splash screen icon image.  If this parameter is not specified,
     # the app's launcher icon will be used instead.
@@ -133,3 +137,8 @@ flutter_native_splash:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: "ic_launcher" # Generar iconos para Android o reemplaza el vigente
+  ios: false # Solo para Android
+  image_path: "assets/icons/Logo.png" # Ruta a tu archivo de icono
+  min_sdk_android: 21 # Mínimo SDK de Android sopo
