--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   crypto: ^3.0.6
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
+  mailer: ^6.4.1
+  flutter_dotenv: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -71,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+      - .env
       - assets/images/Medevial.jpg
       - assets/images/Medieval.png
       - assets/images/Shooter.jpg
